The zap.sh changed in 8214da5a06b62aaeb470887fb554c5d7511b8a04 and change is required elsewhere in the script to use the system java instead of packaged in OSX